# ninjasheets

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: athlete_overrides.example.csv  extraction_patterns.yaml  gym_aliases.csv  videos.example.yaml
docs/: product_spec.md
src/ninjasheets/: __init__.py  cli.py  config.py  enrichment.py  export.py  parsing.py  pipeline.py  transcript.py  utils.py  youtube.py
tests/: test_enrichment.py  test_name_cleaning.py  test_timestamp.py  test_transcript_parser.py  test_youtube_links.py
